lidar/lib/src/lidar_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for the LiDAR SDK.
///
/// Regenerate bindings with `dart run ffigen --lidar ffigen.yaml -v severe`.
///
class LidarBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LidarBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LidarBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  SickScanApiErrorCodes init(
    ffi.Pointer<NativeLidar> lidar,
  ) {
    return SickScanApiErrorCodes.fromValue(_init(
      lidar,
    ));
  }

  late final _initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<NativeLidar>)>>('init');
  late final _init =
      _initPtr.asFunction<int Function(ffi.Pointer<NativeLidar>)>();

  void dispose(
    ffi.Pointer<NativeLidar> lidar,
  ) {
    return _dispose(
      lidar,
    );
  }

  late final _disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NativeLidar>)>>(
          'dispose');
  late final _dispose =
      _disposePtr.asFunction<void Function(ffi.Pointer<NativeLidar>)>();

  SickScanApiErrorCodes registerCallback(
    ffi.Pointer<NativeLidar> lidar,
  ) {
    return SickScanApiErrorCodes.fromValue(_registerCallback(
      lidar,
    ));
  }

  late final _registerCallbackPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<NativeLidar>)>>(
      'registerCallback');
  late final _registerCallback =
      _registerCallbackPtr.asFunction<int Function(ffi.Pointer<NativeLidar>)>();

  void deregisterCallback(
    ffi.Pointer<NativeLidar> lidar,
  ) {
    return _deregisterCallback(
      lidar,
    );
  }

  late final _deregisterCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NativeLidar>)>>(
          'deregisterCallback');
  late final _deregisterCallback = _deregisterCallbackPtr
      .asFunction<void Function(ffi.Pointer<NativeLidar>)>();

  void updateStatus(
    ffi.Pointer<NativeLidar> lidar,
  ) {
    return _updateStatus(
      lidar,
    );
  }

  late final _updateStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NativeLidar>)>>(
          'updateStatus');
  late final _updateStatus =
      _updateStatusPtr.asFunction<void Function(ffi.Pointer<NativeLidar>)>();
}

/// Error codes, return values of SickScanApi-functions
enum SickScanApiErrorCodes {
  /// function executed successfully
  SICK_SCAN_API_SUCCESS(0),

  /// general (unspecified) error
  SICK_SCAN_API_ERROR(1),

  /// sick_scan_xd library not loaded
  SICK_SCAN_API_NOT_LOADED(2),

  /// API not initialized
  SICK_SCAN_API_NOT_INITIALIZED(3),

  /// function not implemented in sick_scan_xd library
  SICK_SCAN_API_NOT_IMPLEMENTED(4),

  /// timeout during wait for response
  SICK_SCAN_API_TIMEOUT(5);

  final int value;
  const SickScanApiErrorCodes(this.value);

  static SickScanApiErrorCodes fromValue(int value) => switch (value) {
        0 => SICK_SCAN_API_SUCCESS,
        1 => SICK_SCAN_API_ERROR,
        2 => SICK_SCAN_API_NOT_LOADED,
        3 => SICK_SCAN_API_NOT_INITIALIZED,
        4 => SICK_SCAN_API_NOT_IMPLEMENTED,
        5 => SICK_SCAN_API_TIMEOUT,
        _ => throw ArgumentError(
            "Unknown value for SickScanApiErrorCodes: $value"),
      };
}

/// Callback declarations
typedef SickScanApiHandle = ffi.Pointer<ffi.Void>;

final class Image extends ffi.Struct {
  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int width;

  external ffi.Pointer<ffi.Uint8> data;
}

final class NativeLidar extends ffi.Struct {
  external SickScanApiHandle api;

  /// Unused but populated. Leave as-is for now.
  external Image image;

  external ffi.Pointer<ffi.Double> angleData;

  @ffi.UnsignedInt()
  external int statusCodeAsInt;

  SickScanApiErrorCodes get statusCode =>
      SickScanApiErrorCodes.fromValue(statusCodeAsInt);

  external ffi.Pointer<ffi.Char> statusBuffer;

  @ffi.Bool()
  external bool hasNewData;
}
